# Flask_SQLAlchemy_Poetry

./: README.md  app.py  crud.py  d_c_table.py  models.py  pyproject.toml  tasks_lesson_18.db
templates/: about.html  base.html  create_error.html  create_note.html  id_error.html  index.html  note_about.html  note_access.html  note_detail.html  note_update.html  notes.html  update_error.html
