[tool.poetry]
name = "flask-project-poetry"
version = "0.1.0"
description = ""
authors = ["PI-Klimkovich <pol-ik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
